# python-oop-project-101

./: .gitignore  README.md  pyproject.toml
tests/: test_custom.py  test_dict.py  test_list.py  test_number.py  test_string.py
validator/: __init__.py  base.py  fabric.py  main.py  rule.py  schema.py  string.py  validators.py
